# thread_pool

./: CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: thread_pool.h
include/thread_pool/: constants.h  executor.h
include/thread_pool/detail/: iterator.h  task.h  traits.h  utils.h  worker.h
test/: CMakeLists.txt  thread_pool_test.cpp
